3822
Screwed up the formatting, here is the example, properly formatted: 
```scala
scala> def foo[A,B,C](f: A => B, g: B => C): A => C = error("todo")
foo: [A,B,C](f: (A) => B,g: (B) => C)(A) => C

scala> foo((a: Int) => a.toDouble, _ + 2.0)
<console>:6: error: missing parameter type for expanded function ((x$$1) => x$$1.$$plus(2.0))
       foo((a: Int) => a.toDouble, _ + 2.0)
                                   ^

scala> foo((a: Int) => a.toDouble, b => b + 2.0)
<console>:6: error: missing parameter type
       foo((a: Int) => a.toDouble, b => b + 2.0)
                                   ^
```
